setup env variables and npm install

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --mode production"
   },
   "keywords": [],
-  "author": "",
+  "author": "Thomas Pencarinha",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.2.0",
